--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -39,7 +39,7 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .landing--social {
